[gd_scene load_steps=3 format=3 uid="uid://chk7xkp2mqp7v"]

[ext_resource type="Script" uid="uid://dhbro7ojevc6f" path="res://scripts/menu.gd" id="1_by63g"]
[ext_resource type="FontFile" uid="uid://dp5yd0a61l0gb" path="res://assets/fonts/kenvector_future_thin.ttf" id="2_nvajy"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_by63g")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -105.0
offset_right = 82.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="TitleLabel" type="Label" parent="MainMenu/MainVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 56
text = "TITLE"
horizontal_alignment = 1

[node name="GameButton" type="Button" parent="MainMenu/MainVBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "GAME"

[node name="OptionsButton" type="Button" parent="MainMenu/MainVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "OPTIONS"

[node name="HighScoreButton" type="Button" parent="MainMenu/MainVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "HIGH SCORES"

[node name="CreditsButton" type="Button" parent="MainMenu/MainVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "CREDITS"

[node name="ExitButton" type="Button" parent="MainMenu/MainVBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../GameButton")
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "EXIT"

[node name="OptionMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsVBoxContainer" type="VBoxContainer" parent="OptionMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -129.0
offset_right = 205.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="OptionsLabel" type="Label" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 56
text = "OPTIONS"
horizontal_alignment = 1

[node name="DifficultyHBoxContainer" type="HBoxContainer" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DifficultyLabel" type="Label" parent="OptionMenu/OptionsVBoxContainer/DifficultyHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "DIFFICULTY:"

[node name="DifficultyOptionButton" type="OptionButton" parent="OptionMenu/OptionsVBoxContainer/DifficultyHBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../BackButton")
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text_overrun_behavior = 3
clip_text = true
selected = 1
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "EASY"
popup/item_0/id = 0
popup/item_1/text = "NORMAL"
popup/item_1/id = 1
popup/item_2/text = "HARD"
popup/item_2/id = 2

[node name="DetailHBoxContainer" type="HBoxContainer" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DetailLabel" type="Label" parent="OptionMenu/OptionsVBoxContainer/DetailHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "DETAIL:"

[node name="DetailOptionButton" type="OptionButton" parent="OptionMenu/OptionsVBoxContainer/DetailHBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text_overrun_behavior = 3
clip_text = true
selected = 2
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "LOW"
popup/item_0/id = 0
popup/item_1/text = "MEDIUM"
popup/item_1/id = 1
popup/item_2/text = "HIGH"
popup/item_2/id = 2

[node name="JoypadHBoxContainer" type="HBoxContainer" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="JoypadLabel" type="Label" parent="OptionMenu/OptionsVBoxContainer/JoypadHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "JOYPAD:"

[node name="JoypadOptionButton" type="OptionButton" parent="OptionMenu/OptionsVBoxContainer/JoypadHBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text_overrun_behavior = 3
clip_text = true
fit_to_longest_item = false

[node name="ScreenHBoxContainer" type="HBoxContainer" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ScreenLabel" type="Label" parent="OptionMenu/OptionsVBoxContainer/ScreenHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "Full Screen:"

[node name="FullScreenCheckButton" type="CheckButton" parent="OptionMenu/OptionsVBoxContainer/ScreenHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32

[node name="VolumeLabel" type="Label" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "VOLUME:"

[node name="SfxHBoxContainer" type="HBoxContainer" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SfxLabel" type="Label" parent="OptionMenu/OptionsVBoxContainer/SfxHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "SFX:"

[node name="SfxHSlider" type="HSlider" parent="OptionMenu/OptionsVBoxContainer/SfxHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.001
value = 1.0

[node name="MusicHBoxContainer" type="HBoxContainer" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MusicLabel" type="Label" parent="OptionMenu/OptionsVBoxContainer/MusicHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "MUSIC:"

[node name="MusicHSlider" type="HSlider" parent="OptionMenu/OptionsVBoxContainer/MusicHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.001
value = 1.0

[node name="BackButton" type="Button" parent="OptionMenu/OptionsVBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../DifficultyHBoxContainer/DifficultyOptionButton")
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="HighScoreMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="HighScoreVBoxContainer" type="VBoxContainer" parent="HighScoreMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HighScoreLabel" type="Label" parent="HighScoreMenu/HighScoreVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 56
text = "HIGH SCORES"

[node name="EasyHBoxContainer" type="HBoxContainer" parent="HighScoreMenu/HighScoreVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="EasyLabel" type="Label" parent="HighScoreMenu/HighScoreVBoxContainer/EasyHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "EASY:"

[node name="EasyScoreLabel" type="Label" parent="HighScoreMenu/HighScoreVBoxContainer/EasyHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="NormalHBoxContainer" type="HBoxContainer" parent="HighScoreMenu/HighScoreVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NormalLabel" type="Label" parent="HighScoreMenu/HighScoreVBoxContainer/NormalHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "NORMAL:"

[node name="NormalScoreLabel" type="Label" parent="HighScoreMenu/HighScoreVBoxContainer/NormalHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="HardHBoxContainer" type="HBoxContainer" parent="HighScoreMenu/HighScoreVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HardLabel" type="Label" parent="HighScoreMenu/HighScoreVBoxContainer/HardHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "HARD:"

[node name="HardScoreLabel" type="Label" parent="HighScoreMenu/HighScoreVBoxContainer/HardHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="BackButton" type="Button" parent="HighScoreMenu/HighScoreVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="CreditsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsVBoxContainer" type="VBoxContainer" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -105.0
offset_right = 82.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="CreditsLabel" type="Label" parent="CreditsMenu/CreditsVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 56
text = "CREDITS"
horizontal_alignment = 1

[node name="CodeHBoxContainer" type="HBoxContainer" parent="CreditsMenu/CreditsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CodeLabel" type="Label" parent="CreditsMenu/CreditsVBoxContainer/CodeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "PROGRAMMING:"

[node name="CodeButton" type="Button" parent="CreditsMenu/CreditsVBoxContainer/CodeHBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../BackButton")
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "X7BIT"

[node name="MusicHBoxContainer" type="HBoxContainer" parent="CreditsMenu/CreditsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MusicLabel" type="Label" parent="CreditsMenu/CreditsVBoxContainer/MusicHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "MUSIC:"

[node name="MusicButton" type="Button" parent="CreditsMenu/CreditsVBoxContainer/MusicHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "WHITE BAT AUDIO"

[node name="ThanksHBoxContainer" type="HBoxContainer" parent="CreditsMenu/CreditsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ThanksLabel" type="Label" parent="CreditsMenu/CreditsVBoxContainer/ThanksHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "THANKS:"

[node name="ThanksButton" type="Button" parent="CreditsMenu/CreditsVBoxContainer/ThanksHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "KAAN ALPAR"

[node name="BackButton" type="Button" parent="CreditsMenu/CreditsVBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../CodeHBoxContainer/CodeButton")
theme_override_fonts/font = ExtResource("2_nvajy")
theme_override_font_sizes/font_size = 32
text = "BACK"

[connection signal="pressed" from="MainMenu/MainVBoxContainer/GameButton" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="MainMenu/MainVBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/MainVBoxContainer/HighScoreButton" to="." method="_on_high_score_button_pressed"]
[connection signal="pressed" from="MainMenu/MainVBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenu/MainVBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="OptionMenu/OptionsVBoxContainer/DifficultyHBoxContainer/DifficultyOptionButton" to="." method="_on_difficulty_option_button_item_selected"]
[connection signal="item_selected" from="OptionMenu/OptionsVBoxContainer/DetailHBoxContainer/DetailOptionButton" to="." method="_on_detail_option_button_item_selected"]
[connection signal="item_selected" from="OptionMenu/OptionsVBoxContainer/JoypadHBoxContainer/JoypadOptionButton" to="." method="_on_joypad_option_button_item_selected"]
[connection signal="toggled" from="OptionMenu/OptionsVBoxContainer/ScreenHBoxContainer/FullScreenCheckButton" to="." method="_on_full_screen_check_button_toggled"]
[connection signal="value_changed" from="OptionMenu/OptionsVBoxContainer/SfxHBoxContainer/SfxHSlider" to="." method="_on_sfx_h_slider_value_changed"]
[connection signal="value_changed" from="OptionMenu/OptionsVBoxContainer/MusicHBoxContainer/MusicHSlider" to="." method="_on_music_h_slider_value_changed"]
[connection signal="pressed" from="OptionMenu/OptionsVBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HighScoreMenu/HighScoreVBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsVBoxContainer/CodeHBoxContainer/CodeButton" to="." method="_on_code_button_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsVBoxContainer/MusicHBoxContainer/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsVBoxContainer/ThanksHBoxContainer/ThanksButton" to="." method="_on_thanks_button_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsVBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
